using System;
internal class AnimationStrings
{
    //Player's animation strings
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string rangedAttackTrigger = "rangedAttackTrigger";

    //Knight's animation strings
    internal static string isInAttackRange = "isInAttackRange";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hitTrigger";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
}